src/ADSM/static/css/adsm.css
/* ... */
#population_panel ul li span:last-child {
    display:inline-block;
    max-width: 50%;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    font-style: italic;
    color: #606060;
}
/*-------------------------------------------------------------*/
/*-----functions panel-----*/
/*-------------------------------------------------------------*/
#functions {}
/*-------------------------------------------------------------*/
/*-----navigation menu-----*/
/*-------------------------------------------------------------*/
#setupMenu {
    list-style: none;
    padding-left: 0;
    margin-bottom: 54px;
    margin-top:5px;
}

#setupMenu h2:first-child a{
    border-top:1px solid #eeeeee;
}

#setupMenu h2, #setupMenu h3, #setupMenu h4 {
    margin-top: 0;
    margin-bottom: 0; /* These are meant to stack */
    overflow: hidden;
    white-space: nowrap;
    position:relative;
    /*width:170px;*/
}

#setupMenu a {
    color: #606060;
    display:block;
    text-decoration: none;
    line-height: 35px;
    padding-left: 15px;
    transition:background-color .2s ease;
    width:170px;
    position:relative;
    margin-bottom:1px;
}

#setupMenu a:before {
    content:"";
    display:block;
    width:100%;
    height:1px;
    background-color:#eeeeee;
    position:absolute;
    bottom:-1px;
    left:-5px;
}

#setupMenu a:hover{
    background-color:#eeeeee;
}

#setupMenu a.active:hover{
    background-color:#606060;
}

#setupMenu h3 a, #setupMenu h4 a {
    padding-left:30px;
}

#setupMenu a.active {
    background-color: #606060;
    margin-left:0;
    color:white;
    font-weight:400;
    -webkit-border-radius:0 4px 4px 0;
    width:175px;
}

#setupMenu span {
    width: 5px;
    height: 35px;
    -webkit-border-radius:0 2px 2px 0;
}
/*--------- right border on results nav menu -----*/
#setupMenu h2:before,
#setupMenu h3:before,
#setupMenu h4:before {
    content: "";
    width: 5px;
    height: 37px;
    display: block;
    position: absolute;
    right: 5px;
    top: -1px;
    border-top: 1px solid #ebebeb;
    border-right: 1px solid #ebebeb;
    border-bottom: 1px solid #ebebeb;
    border-radius: 0 2px 2px 0;
}

#setupMenu .incomplete {
    font-weight: 600;
    font-style: italic;
    color: #999;
    background-color: #f6da40;
}

#setupMenu .completed, .completed {
    background-color: #68be5e;
}

#setupMenu .empty_subcategory {
    display: none;
}

#RunSimulationIn,
#RunSimulationRes {
    position: fixed !important;
    bottom: 10px;
    left: 0;
    width:  170px;
}
/*----------------------need to remove the glypicon element and make a left facing arrow with hook for results------*/
#RunSimulationRes a{
    color: rgba(255, 255, 255, .8);
}
#RunSimulationIn a:after {
    content: "";
    position: absolute;
    top: 17px;
    margin-left: 8px;
    border-top: 8px solid transparent;
    border-bottom: 8px solid transparent;
    border-left: 11px solid #606060;
    transition: all .2s ease;
}
#RunSimulationRes a:after {
    content: "";
    position: relative;
    float:left;
    top: 17px;
    margin-right: 10px;
    border-top: 8px solid transparent;
    border-bottom: 8px solid transparent;
    border-right: 11px solid rgba(255, 255, 255, .8);
    transition: all .2s ease;
}

#RunSimulationIn.incomplete,
#RunSimulationIn.incomplete:hover,
#RunSimulationIn a.incomplete:hover {
    background-color:#f6da40;
}

#RunSimulationIn.completed,
#RunSimulationIn.completed:hover,
#RunSimulationIn a.completed:hover {
    background-color:#68be5e;
}
#RunSimulationRes,
#RunSimulationRes:hover,
#RunSimulationRes a.completed,
#RunSimulationRes a.completed:hover {
    background-color: #3577b1;
}

#RunSimulationIn a,
#RunSimulationRes a {
    height: 50px;
    line-height: 50px;
    font-size:17px;
    font-style:italic;
    transition: color .2s ease;
}
#RunSimulationIn:hover a {
    color: black;
}
#RunSimulationRes:hover a {
    color: rgba(255, 255, 255, 1);
}
#RunSimulationIn:hover a:after{
    border-left: 11px solid black;
}
#RunSimulationRes:hover a:after{
    border-right: 11px solid rgba(255, 255, 255, 1);
}
#RunSimulationIn a.tall,
#RunSimulationRes a.tall {
    padding-top: 10px;
    height: 75px;
    line-height: 20px;
}

#RunSimulationIn a:before,
#RunSimulationRes a:before {
    display:none;
}
/*-------------------------------------------------------------*/
/*-----blocking overlay-----*/
/*-------------------------------------------------------------*/
.blocking-overlay {
    display:none;
    position: fixed;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 10000;
    background: rgba(255,255,255,0.6);
    box-shadow: inset 0 0 25px #888;
}
.overlay-content {
    text-align: center;
    margin-top:calc(45vh - 50px);
    color: #666;
    text-shadow: 1px 1px 1px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff;
}

.overlay-content img {
    height: 30px;
    margin-left:-14px;
}
/*-------------------------------------------------------------*/
/*-----button stuff-----*/
/*-------------------------------------------------------------*/
.btn {
    font-style: italic;
    margin: 3px 1px 0px 1px;
    color: #ffffff;
    border-radius: 0;
    border: 0px;
    transition: all .2s ease;
}

.btn-add {
    background: none;
    padding: 0 0 6px 3px;
    border-width: 0;
    color: #007700;
    vertical-align: middle;
    margin: 8px 0;
}

.btn-default {
    background-color: #b1b1b1;
}

.btn-primary,
.btn-unsaved {
    background-color: #3577b1;
    transition: all 2s ease;
}

.btn-primary:hover,
.btn.unsaved:hover {
    background-color: #4499e3;
    color:white;
}

section .btn-primary:focus,
.btn-unsaved:focus,
.btn-danger:focus {
    outline: 2px solid rgba(99, 215, 253, .5) !important;
    color:white;
}
.btn-danger:focus {
    border:none;
    background-color: #e0383e;
}

.btn-primary.disabled, .btn-primary[disabled] {
    background-color: #7B8893;
    color: rgba(255, 255, 255, .8);
}
/* ... */

